--- a/sail/courses/templates/courses/course_list.html
+++ b/sail/courses/templates/courses/course_list.html
@@ -38,8 +38,14 @@
                                 {% endfor %}
                             {% endif %}
                         </div>
-                        <p class="article-content mb-1">{{ course.short_description }}</p>
-                        <small class="text-muted">Tags: {{ course.tags.all|join:", " }}</small>
+                        <p class="article-content mt-2 mb-2">{{ course.short_description }}</p>
+                        {% if course.prior_knowledge == '' %}
+                            <small class="text-muted"><strong>Prior Knowledge:</strong> None</small>
+                        {% else %}
+                            <small class="text-muted"><strong>Prior Knowledge:</strong> {{ course.prior_knowledge }}</small>
+                        {% endif %}
+                        <br>
+                        <small class="text-muted"><strong>Tags:</strong> {{ course.tags.all|join:", " }}</small>
                     </div>
                 </article>
             {% endfor %}
