--- a/sail/users/templates/users/profile.html
+++ b/sail/users/templates/users/profile.html
@@ -1,5 +1,6 @@
 {% extends "public/base.html" %}
 {% load crispy_forms_tags %}
+{% load qr_tags %}
 {% block content %}
     <div class="content-section w-75">
         <div class="media">
@@ -28,6 +29,14 @@
             </div>
         </form>
 
+        {% if user.student %}
+            <legend class="border-bottom">My Sail ID</legend>
+            <small class="text-muted">Please display this QR Code to Sail Staff when checking in.</small>
+            <div class="mt-3">
+                {% qr_from_mail user.email %}
+            </div>
+        {% endif %}
+
         {% if user.teacher %}
             <legend class="border-bottom">My Courses</legend>
             <small class="text-muted">Click on a course to view, update, or delete it.</small>
@@ -37,6 +46,5 @@
                 {% endfor %}
             </div>
         {% endif %}
-        
     </div>
 {% endblock content %}
