--- a/sail/public/templates/public/home.html
+++ b/sail/public/templates/public/home.html
@@ -1,12 +1,12 @@
 {% extends "public/base.html" %}
 {% load static %}
-{% block css %}
+{% block head %}
     <style>
         body {
             background-color: #afbee5;
         }
     </style>
-{% endblock css %}
+{% endblock head %}
 
 {% block content %}
     <img src="{% static 'public/sail_logo.png' %}" alt="Sail Logo" style="width:40%" class="center">
