--- a/sail/courses/templates/courses/my_courses.html
+++ b/sail/courses/templates/courses/my_courses.html
@@ -1,7 +1,11 @@
 {% extends "public/base.html" %}
 {% block content %}
     <legend class="border-bottom">My Courses</legend>
-    <small class="text-muted">Click on a course to view it.</small>
+    {% if user.student.section_set.count == 0 %}
+        <small class="text-muted">Click <a href="{% url 'courses_list' %}">here</a> to start signing up for courses. Your courses will show up here after you sign up for them.</small>
+    {% else %}
+        <small class="text-muted">Click on a course to view it.</small>
+    {% endif %}
     <div class="mt-3">
         {% for section in sections %}
             <div class="mb-3">
