--- a/public/templates/public/base.html
+++ b/public/templates/public/base.html
@@ -79,4 +79,21 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
+<footer class="footer bg-sail-color">
+    <div class="container">
+        <div class="row">
+            <address class="col">
+                <h4 class="mb-3" style="color:white">Location</h4>
+                Thomas M. Siebel Center for Computer Science <br>
+                201 N Goodwin Ave <br>
+                Urbana, IL 61801
+            </address>
+            <address class="col">
+                <h4 class="mb-3" style="color:white">Contact Us</h4>
+                Questions, comments, concerns? Email us at <a class="contact-us-link" target="_blank" href="mailto:cs-sail@lists.cs.illinois.edu">cs-sail@lists.cs.illinois.edu</a><br>
+                You can also find us on <a class="contact-us-link" target="_blank" href="https://facebook.com/illinoissail">Facebook</a> and <a class="contact-us-link" target="_blank" href="https://www.instagram.com/illinois_cs_sail/">Instagram</a>
+            </address>
+        </div>
+    </div>
+</footer>
 </html>
