Update about page

--- a/public/templates/public/about.html
+++ b/public/templates/public/about.html
@@ -1,17 +1,33 @@
 {% extends "public/base.html" %}
 {% block content %}
-    <h3>What is Sail?</h3>
-    <p>
-        Sail is a one-day event held at the Thomas M. Siebel Center for Computer Science. It is completely free to attend, and we'll also provide attendees with breakfast, lunch, dinner, and lots of swag! Come learn more about computer science and life at the University of Illinois through classes taught by current students on topics ranging from Machine Learning and Virtual Reality to The Science of Bitcoin and Texas Hold'em Techniques.        
-    </p>
+    <iframe class="center mb-5 mt-3" width="644" height="362" src="https://www.youtube.com/embed/efstAwLBMdw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div class="about">
+        <h3>What is Sail?</h3>
+        <p>
+            Sail is a one-day event held at the Thomas M. Siebel Center for Computer Science. It is completely free to attend, and we'll also provide attendees with breakfast, lunch, dinner, and lots of swag! Come learn more about computer science and life at the University of Illinois through classes taught by current students on topics ranging from Machine Learning and Virtual Reality to The Science of Bitcoin and Texas Hold'em Techniques.        
+        </p>
 
-    <h3>Who is Sail for?</h3>
-    <p>
-        High school students like you! If you're interested in computer science, this is a great way to gain more exposure to the field and make some friends along the way! We welcome students of all backgrounds.        
-    </p>
+        <h3>Who is Sail for?</h3>
+        <p>
+            High school students like you! If you're interested in computer science, this is a great way to gain more exposure to the field and make some friends along the way! We welcome students of all backgrounds.        
+        </p>
 
-    <h3>When and where is Sail?</h3>
-    <p>
-        Sail will be at the Siebel Center for Computer Science at the University of Illinois at Urbana-Champaign. Stay tuned for more information about Sail 2020 as we approach April!
-    </p>
+        <h3>When and where is Sail?</h3>
+        <p>
+            Sail will be at the Siebel Center for Computer Science at the University of Illinois at Urbana-Champaign. Stay tuned for more information about Sail 2020 as we approach April!
+        </p>
+
+        <h3>What if I'm an admitted student?</h3>
+        <p>
+            Admitted students are strongly encouraged to come! You'll get to experience Sail with fellow admitted students, listen to professors and interact more personally with current students. You'll also have the opportunity to participate in information sessions and activities tailored specifically for admitted students like you!        
+        </p>
+
+        <h3>What if I have dietary restrictions?</h3>
+        <p>
+            Don't worry, we will have vegetarian and gluten-free options for all 3 meals! If you have additional restrictions, let us know and we'll do our best to accommodate you.        
+        </p>
+
+        <h3>Other questions?</h3>
+        <p>Please don’t hesitate to contact us at <a class="contact-us-link" target="_blank" href="mailto:cs-sail@lists.cs.illinois.edu">cs-sail@lists.cs.illinois.edu</a>.</p>
+    </div>
 {% endblock content %}
