--- a/public/templates/public/base.html
+++ b/public/templates/public/base.html
@@ -22,7 +22,7 @@
     {% endif %}
     {% block head %}{% endblock head %}
 </head>
-<body>
+<body class="d-flex flex-column">
     <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-sail-color">
             <div class="container">
