--- a/public/templates/public/home.html
+++ b/public/templates/public/home.html
@@ -16,5 +16,5 @@
         high schoolers have the chance to experience what it is like to be a computer science student
         at the University of Illinois at Urbana-Champaign.
     </p>
-    <a class="btn btn-light center mt-5" style="width:15%" href="{% url 'courses_list' %}">View courses</a>
+    <a class="btn btn-light center mt-5" style="width:15%" href="{% url 'users_interest_form' %}">Fill out Interest Form</a>
 {% endblock content %}
