--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -48,7 +48,8 @@
             <small class="text-muted">Click on a course to view, update, or delete it.</small>
             <div class="mt-3">
                 {% for course in user.teacher.course_set.all %}
-                    <a class="btn btn-outline-info" href="{% url 'courses_detail' course.id %}">{{ course }}</a>
+                    <a class="btn btn-outline-info mb-2" href="{% url 'courses_detail' course.id %}">{{ course }}</a>
+                    <br>
                 {% endfor %}
             </div>
         {% endif %}
