Fix minor layout issues on mobile site

--- a/courses/templates/courses/my_courses.html
+++ b/courses/templates/courses/my_courses.html
@@ -10,7 +10,7 @@
         {% for section in sections %}
             <div class="mb-3">
                 <h4>{{ section.start_time|date:"H:i" }} at {{ section.room }}</h4>
-                <a class="btn btn-outline-info" href="{% url 'courses_detail' section.course.id %}">{{ section.course }}</a>
+                <a class="btn btn-outline-info" style="white-space:normal; text-align:left" href="{% url 'courses_detail' section.course.id %}">{{ section.course }}</a>
             </div>
         {% endfor %}
     </div>
