--- a/public/templates/public/about.html
+++ b/public/templates/public/about.html
@@ -1,8 +1,14 @@
 {% extends "public/base.html" %}
 {% block content %}
-    <div class="text-center embed-responsive embed-responsive-16by9 w-75 mx-auto">
-        <iframe class="embed-responsive-item mt-3" src="https://www.youtube.com/embed/efstAwLBMdw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
+    {% if request.user_agent.is_mobile %}
+        <div class="text-center embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item mt-3" src="https://www.youtube.com/embed/efstAwLBMdw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+    {% else %}
+        <div class="text-center embed-responsive embed-responsive-16by9 w-75 mx-auto">
+            <iframe class="embed-responsive-item mt-3" src="https://www.youtube.com/embed/efstAwLBMdw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+    {% endif %}
     <div class="about mt-4">
         <h3>What is Sail?</h3>
         <p class="mb-4">
