Rename view names

--- a/courses/templates/courses/course_confirm_delete.html
+++ b/courses/templates/courses/course_confirm_delete.html
@@ -9,7 +9,7 @@
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-outline-danger" type="submit">Delete</button>
-                <a class="btn btn-outline-secondary" href="{% url 'courses_detail' course.id %}">Cancel</a>
+                <a class="btn btn-outline-secondary" href="{% url 'courses-detail' course.id %}">Cancel</a>
             </div>
         </form>
     </div>
