--- a/public/templates/public/home.html
+++ b/public/templates/public/home.html
@@ -22,6 +22,6 @@
             high schoolers have the chance to experience what it is like to be a computer science student
             at the University of Illinois at Urbana-Champaign.
         </p>
-        <a class="btn btn-light mt-1" href="{% url 'users_interest_form' %}">Fill out Interest Form</a>
+        <a class="btn btn-light mt-1" href="{% url 'users-interest-form' %}">Fill out Interest Form</a>
     </div>
 {% endblock content %}
