--- a/staff/templates/staff/staff_actions.html
+++ b/staff/templates/staff/staff_actions.html
@@ -3,6 +3,6 @@
     <div class="content-section">
         <legend class="border-bottom mb-3">Staff Actions</legend>
         <p>Choose from the actions below:</p>
-        <a class="btn btn-outline-primary" href="{% url 'staff_send_email' %}">Send Email</a>
+        <a class="btn btn-outline-primary" href="{% url 'staff-send-email' %}">Send Email</a>
     </div>
 {% endblock content %}
