--- a/users/templates/users/forms.html
+++ b/users/templates/users/forms.html
@@ -95,7 +95,7 @@
         <div class="media-body">
             <div class="mb-3">
                 <h2 class="mb-3">Medical Form</h2>
-                <p>Please download the form <a href="{% url 'users_forms_medical' %}">here</a> and bring it with you when you check-in to Sail.</p>
+                <p>Please download the form <a href="{% url 'users-forms-medical' %}">here</a> and bring it with you when you check-in to Sail.</p>
             </div>
         </div>
     </article>
