--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -13,13 +13,13 @@
             <div class="form-group">
                 <button class="btn btn-outline-primary" type="submit">Login</button>
                 <small class="text-muted ml-2">
-                    <a href="{% url 'password_reset' %}">Forgot password?</a>
+                    <a href="{% url 'password-reset' %}">Forgot password?</a>
                 </small>
             </div>
         </form>
         <div class="border-top pt-3">
             <small class="text-muted">
-                Need an account? <a class="ml-2" href="{% url 'users_register' %}">Signup now</a>
+                Need an account? <a class="ml-2" href="{% url 'users-register' %}">Signup now</a>
             </small>
         </div>
     </div>
