--- a/courses/templates/courses/course_list.html
+++ b/courses/templates/courses/course_list.html
@@ -22,18 +22,18 @@
                     {{ time_form|crispy }}
                 </fieldset> 
             </form>
-            <a class="btn btn-outline-primary" href="{% url 'courses_list' %}">Clear Filters</a>
+            <a class="btn btn-outline-primary" href="{% url 'courses-list' %}">Clear Filters</a>
         </div>
         {% for course in courses %}
             <article class="media content-section mb-2">
                 <div class="media-body">
                     <div class="article-metadata">
-                        <h5><u><a id="coursename" href="{% url 'courses_detail' course.id %}">{{ course.course_name }}</a></u></h5>
+                        <h5><u><a id="coursename" href="{% url 'courses-detail' course.id %}">{{ course.course_name }}</a></u></h5>
                         <span class="ml-1">by {{ course.teacher }}</span>
                         {% if course.teacher == user.teacher %}
                             <div>
-                                <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'courses_update' course.id %}">Update</a>
-                                <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'courses_delete' course.id %}">Delete</a>
+                                <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'courses-update' course.id %}">Update</a>
+                                <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'courses-delete' course.id %}">Delete</a>
                             </div> 
                         {% endif %}
                         {% if user.student %}
@@ -95,12 +95,12 @@
                     <article class="media content-section mb-2">
                         <div class="media-body">
                             <div class="article-metadata">
-                                <h4 style="display:inline"><u><a id="coursename" href="{% url 'courses_detail' course.id %}">{{ course.course_name }}</a></u></h4>
+                                <h4 style="display:inline"><u><a id="coursename" href="{% url 'courses-detail' course.id %}">{{ course.course_name }}</a></u></h4>
                                 <span class="ml-1 float-right">by {{ course.teacher }}</span>
                                 {% if course.teacher == user.teacher %}
                                     <div>
-                                        <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'courses_update' course.id %}">Update</a>
-                                        <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'courses_delete' course.id %}">Delete</a>
+                                        <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'courses-update' course.id %}">Update</a>
+                                        <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'courses-delete' course.id %}">Delete</a>
                                     </div> 
                                 {% endif %}
                                 {% if user.student %}
@@ -176,7 +176,7 @@
                             {{ time_form|crispy }}
                         </fieldset> 
                     </form>
-                    <a class="btn btn-outline-primary" href="{% url 'courses_list' %}">Clear Filters</a>
+                    <a class="btn btn-outline-primary" href="{% url 'courses-list' %}">Clear Filters</a>
                 </div>
             </div>
         </div>
