--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -32,7 +32,7 @@
         <legend class="border-bottom">My Forms</legend>
         <small class="text-muted">You will need to sign a medical, participant, and photo form.</small>
         <div class="my-3">
-            <a class="btn btn-outline-primary" href="{% url 'users_forms' %}">Click here to sign</a>
+            <a class="btn btn-outline-primary" href="{% url 'users-forms' %}">Click here to sign</a>
         </div>
         
         {% if user.student %}
@@ -48,7 +48,7 @@
             <small class="text-muted">Click on a course to view, update, or delete it.</small>
             <div class="mt-3">
                 {% for course in user.teacher.course_set.all %}
-                    <a class="btn btn-outline-info mb-2" href="{% url 'courses_detail' course.id %}">{{ course }}</a>
+                    <a class="btn btn-outline-info mb-2" href="{% url 'courses-detail' course.id %}">{{ course }}</a>
                     <br>
                 {% endfor %}
             </div>
