--- a/users/templates/users/register_form.html
+++ b/users/templates/users/register_form.html
@@ -17,7 +17,7 @@
         </form>
         <div class="border-top pb-3">
             <small class="text-muted">
-                Already have an account? <a class="ml-2" href="{% url 'users_login' %}">Sign In</a>
+                Already have an account? <a class="ml-2" href="{% url 'users-login' %}">Sign In</a>
             </small>
         </div>
     </div>
