Comment and format code in users/

--- a/users/templates/users/password_reset_done.html
+++ b/users/templates/users/password_reset_done.html
@@ -1,3 +1,5 @@
+<!-- Page where users are redirected after initially requesting a password reset -->
+
 {% extends "public/base.html" %}
 {% block content %}
     <div class='alert alert-info'>
