--- a/users/templates/users/password_reset.html
+++ b/users/templates/users/password_reset.html
@@ -1,3 +1,5 @@
+<!-- Page where users initially enter their email and request a reset link to be sent to them -->
+
 {% extends "public/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
