--- a/users/templates/users/password_reset_complete.html
+++ b/users/templates/users/password_reset_complete.html
@@ -1,3 +1,5 @@
+<!-- Page where users are redirected after actually resetting their password (after password_reset_confirm) -->
+
 {% extends "public/base.html" %}
 {% block content %}
     <div class='alert alert-info'>
