--- a/users/templates/users/password_reset_confirm.html
+++ b/users/templates/users/password_reset_confirm.html
@@ -1,3 +1,5 @@
+<!-- Page where users actually reset their password (after clicking on reset link in their email) -->
+
 {% extends "public/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
